--- a/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
+++ b/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
@@ -1,5 +1,57 @@
-﻿@{
+﻿@model Worktastic.Models.JobPosting;
+@{
     ViewData["Title"] = "Erstellen oder Bearbeiten";
 }
 
-Hier kann man ein neus Inserat anlegen.
+<form asp-controller="JobPosting" asp-action="CreateEditJob">
+    <div class="card">
+
+        <div class="card-header">
+            <h5>Inserat bearbeiten</h5>
+        </div>
+
+        <div class="card-body form-group">
+
+            <div class="row">
+                <div class="col">
+                    <input class="form-control" asp-for="JobTitle" type="text" placeholder="Bitte trage eine Jobbeschreibung ein" />
+                </div>
+
+                <div class="col">
+                    <input class="form-control" asp-for="JobLocation" type="text" placeholder="Bitte trage einen Ort ein" />
+                </div>
+            </div>
+        </div>
+
+        <div class="row form-group">
+            <div class="col">
+                <textarea rows="6" class="form-control" asp-for="Description" placeholder="Bitte trage eine Beschreibung ein"></textarea>
+            </div>
+        </div>
+
+        <div class="card-footer">
+            <button class="btn btn-primary" type="submit">Speichern</button>
+        </div>
+
+        <div class="card-body form-group">
+
+            <div class="row">
+                <div class="col">
+                    <input class="form-control" asp-for="Salary" type="number" placeholder="Bitte gebe Gehalt" />
+                </div>
+                <div class="col">
+                    <div class="col-form-label">
+                        Wann startet der Job?
+                    </div>
+                    <input class="form-control" asp-for="StartDate" type="date"/>
+                </div>
+
+                <div class="col">
+                    <input class="form-control" asp-for="JobLocation" type="text" placeholder="Bitte trage einen Ort ein" />
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</form>
