--- a/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
+++ b/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
@@ -29,27 +29,30 @@
             </div>
         </div>
 
-        <div class="card-footer">
-            <button class="btn btn-primary" type="submit">Speichern</button>
-        </div>
-
         <div class="card-body form-group">
 
             <div class="row">
-                <div class="col">
+                <div class="col-6">
                     <input class="form-control" asp-for="Salary" type="number" placeholder="Bitte gebe Gehalt" />
                 </div>
-                <div class="col">
+            </div>
+
+            <div class="row form-group">
+                <div class="col-6">
                     <div class="col-form-label">
                         Wann startet der Job?
                     </div>
-                    <input class="form-control" asp-for="StartDate" type="date"/>
-                </div>
-
-                <div class="col">
-                    <input class="form-control" asp-for="JobLocation" type="text" placeholder="Bitte trage einen Ort ein" />
+                    <input class="form-control" asp-for="StartDate" type="date" />
                 </div>
             </div>
+
+            <div class="col">
+                <input class="form-control" asp-for="JobLocation" type="text" placeholder="Bitte trage einen Ort ein" />
+            </div>
+        </div>
+
+        <div class="card-footer">
+            <button class="btn btn-primary" type="submit">Speichern</button>
         </div>
 
     </div>
