Firmenname, Kontaktdaten hinzugefügt

--- a/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
+++ b/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
@@ -46,6 +46,25 @@
                 </div>
             </div>
 
+            <hr />
+            <div class="row form-group">
+                <div class="col">
+                    <input class="form-control" asp-for="CompanyName" type="text" placeholder="Firmenname"/>
+                </div>
+                <div class="col">
+                    <input class="form-control" asp-for="ContactWebsite" type="url" placeholder="Website (URL)"/>
+                </div>
+            </div>
+
+            <div class="row form-group">
+                <div class="col">
+                    <input class="form-control" asp-for="ContactPhone" type="tel" placeholder="Telefonnummer"/>
+                </div>
+                <div class="col">
+                    <input class="form-control" asp-for="ContactMail" type="email" placeholder="Email-Adresse"/>
+                </div>
+            </div>
+
             <div class="col">
                 <input class="form-control" asp-for="JobLocation" type="text" placeholder="Bitte trage einen Ort ein" />
             </div>
