--- a/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
+++ b/Worktastic/Views/JobPosting/CreateEditJobPosting.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Erstellen oder Bearbeiten";
 }
 
-<form asp-controller="JobPosting" asp-action="CreateEditJob">
+<form asp-controller="JobPosting" asp-action="CreateEditJob" enctype="multipart/form-data">
     <div class="card">
 
         <div class="card-header">
@@ -49,31 +49,36 @@
             <hr />
             <div class="row form-group">
                 <div class="col">
-                    <input class="form-control" asp-for="CompanyName" type="text" placeholder="Firmenname"/>
+                    <input class="form-control" asp-for="CompanyName" type="text" placeholder="Firmenname" />
                 </div>
                 <div class="col">
-                    <input class="form-control" asp-for="ContactWebsite" type="url" placeholder="Website (URL)"/>
+                    <input class="form-control" asp-for="ContactWebsite" type="url" placeholder="Website (URL)" />
                 </div>
             </div>
 
             <div class="row form-group">
                 <div class="col">
-                    <input class="form-control" asp-for="ContactPhone" type="tel" placeholder="Telefonnummer"/>
+                    <input class="form-control" asp-for="ContactPhone" type="tel" placeholder="Telefonnummer" />
                 </div>
                 <div class="col">
-                    <input class="form-control" asp-for="ContactMail" type="email" placeholder="Email-Adresse"/>
+                    <input class="form-control" asp-for="ContactMail" type="email" placeholder="Email-Adresse" />
                 </div>
             </div>
 
             <div class="col">
                 <input class="form-control" asp-for="JobLocation" type="text" placeholder="Bitte trage einen Ort ein" />
             </div>
-        </div>
 
-        <div class="card-footer">
-            <button class="btn btn-primary" type="submit">Speichern</button>
-        </div>
+            <div class="row form-group">
+                <div class="col">
+                    <label Bild</label>
+                    <input class="form-control-file" name="file" type="file" />
+                </div>
 
-    </div>
+
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-primary" type="submit">Speichern</button>
+            </div>
 
 </form>
